--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "isbot": "^5.1.17",
     "lucide-react": "^0.482.0",
     "mdx-bundler": "^10.1.1",
+    "motion": "^12.12.2",
     "next-themes": "^0.4.6",
     "nprogress": "^0.2.0",
     "postgres": "^3.4.5",
