--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "typecheck": "react-router typegen && tsc",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:typegen": "supabase gen types typescript --project-id <project-id> > database.types.ts",
+    "db:typegen": "npx supabase gen types typescript --project-id trkpittstkauamteybbl > database.types.ts",
     "test:e2e": "npx playwright test",
     "test:e2e:ui": "npx playwright test --ui",
     "format": "prettier --write \"app/**/*.{ts,tsx,js,jsx,json,css,md,mdx}\""
