--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@vercel/react-router": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "~3.6.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.40.1",
     "i18next": "^24.2.3",
@@ -63,7 +63,7 @@
     "nprogress": "^0.2.0",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-email": "4.0.2",
     "react-i18next": "^15.4.1",
