--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "input-otp": "^1.4.2",
     "isbot": "^5.1.17",
     "lucide-react": "^0.482.0",
+    "luxon": "^3.6.1",
     "mdx-bundler": "^10.1.1",
     "motion": "^12.12.2",
     "next-themes": "^0.4.6",
@@ -83,6 +84,7 @@
     "@react-router/dev": "^7.5.1",
     "@tailwindcss/vite": "^4.0.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/luxon": "^3.6.2",
     "@types/node": "^20",
     "@types/nprogress": "^0.2.3",
     "@types/pg": "^8.11.11",
